force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__ContactRelationshipClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ContactRelationshipClass__c</fullName>
    <description>Class name which shows how Members relate to Contacts. If empty, Member&apos;s email is used.</description>
    <inlineHelpText>Class name which shows how Members relate to Contacts. If empty, Member&apos;s email is used.</inlineHelpText>
    <label>Contact Relationship class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>