force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__CPUTimeMargin__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CPUTimeMargin__c</fullName>
    <description>Time limit after which processing is executed offline.</description>
    <inlineHelpText>Time limit after which processing is executed offline.</inlineHelpText>
    <label>CPU Time limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>