force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__EmailReflectionClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EmailReflectionClass__c</fullName>
    <label>Email Reflection Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>