force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__FieloVersion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FieloVersion__c</fullName>
    <description>Fielo current installed version.</description>
    <inlineHelpText>Fielo current installed version.</inlineHelpText>
    <label>Fielo Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>