force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__Instance__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Instance__c</fullName>
    <description>Instance (server) name used by the ORG (Backend).</description>
    <inlineHelpText>Instance (server) name used by the ORG (Backend).</inlineHelpText>
    <label>Instance</label>
    <length>6</length>
    <type>Text</type>
</CustomField>