force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__OptimizedProgramQuery__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__OptimizedProgramQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, Site only retrieves Program&apos;s Custom fields defined in the Program fieldset.</description>
    <inlineHelpText>When ticked, Site only retrieves Program&apos;s Custom fields defined in the Program fieldset.</inlineHelpText>
    <label>Optimized Program query</label>
    <type>Checkbox</type>
</CustomField>