force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/FieloPLT__RewardDeliveryClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardDeliveryClass__c</fullName>
    <description>Class name in which reflection for granting Challenge Rewards is defined.</description>
    <inlineHelpText>Class name in which reflection for granting Challenge Rewards is defined.</inlineHelpText>
    <label>Reward Delivery Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>